# Hunta2

./: .gitignore  .travis.yml  CMakeLists.txt  Hunta2.cbp  Hunta2.depend  Hunta2.layout  Makefile  PickingSticks.depend  PickingSticks.layout  README.md  config.mk  fireball.xcf  goblin.xcf  green_monster1.xcf  grey_monster.xcf  gubbe.xcf  gubbenew.xcf  hunta2  shield.xcf  sword.xcf  tree.xcf  wolf.xcf
config/: makefile.dragonfly  makefile.fedora  makefile.freebsd  makefile.linux  makefile.openbsd  makefile.school  makefile.slackware  makefile.tests  makefile.travis  sources
data/: inventory1  items  map1  map2  map233  mapTest
data/enemies/: enemies.lua
data/environment/: environment.lua
data/items/: items.lua
data/items/armor/: armor.lua
data/items/misc/: misc.lua
data/items/usables/: apple.lua  red-potion.lua  usables.lua
data/items/weapons/: weapons.lua
data/maps/: maps.lua  maps.lua~
data/maps/1/: enemies.lua  environment.lua  map.lua  tiles.lua
data/maps/2/: enemies.lua  environment.lua  tiles.lua
data/maps/3/: enemies.lua  environment.lua  tiles.lua
data/maps/4/: environment.lua  tiles.lua
data/maps/5/: enemies.lua  environment.lua  tiles.lua
data/maps/6/: environment.lua  tiles.lua
data/maps/7/: tiles.lua
data/maps/9/: tiles.lua
data/savedata/: nooobn.lua  nooobn_inventory.lua  saveslots.lua  wolfhunter.lua
data/savedata/slot1/: inventory
data/tiles/: tiles.lua
gimpfiles/: bird.xcf  bloodSplash.xcf  button.xcf  character.xcf  dark_tree.xcf  frame.xcf  green_monster.xcf  gubbenew.xcf  heal.xcf  ice.xcf  inventory.xcf  rat.xcf  sword.xcf  tree_new.xcf  wolf.xcf  wolfbg.xcf  x.xcf  yellow_monster.xcf
lib/x86/: SDL2.lib  SDL2main.lib
src/: Button.cpp  Button.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  CharacterCreationScreen.cpp  CharacterCreationScreen.hpp  Component.cpp  Component.hpp  CreateMap.lua  Editor.cpp  Editor.hpp  Enemy.cpp  Enemy.hpp  EnemyDataController.cpp  EnemyDataController.hpp  EnemyManager.cpp  EnemyManager.hpp  Entity.cpp  Entity.hpp  EntityCreator.cpp  EntityCreator.hpp  EntityManager.cpp  EntityManager.h  EntitySystem.cpp  EntitySystem.hpp  Enums.hpp  Environment.cpp  Environment.hpp  GPhysics.cpp  GPhysics.hpp  Game.cpp  Game.hpp  Global.cpp  Global.hpp  Health.cpp  Health.hpp  HealthBar.cpp  (+78 more)
src/common/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.hpp  LTimer.cpp  LTimer.hpp
src/components/: Button.cpp  Button.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  EntitySystem.cpp  EntitySystem.hpp  Environment.cpp  Environment.hpp  GPhysics.cpp  GPhysics.hpp  Health.cpp  Health.hpp  Item.hpp  ItemManager.cpp  ItemManager.hpp  KeyboardController.cpp  KeyboardController.hpp  MouseController.cpp  Position.cpp  Position.hpp  Projectile.cpp  Projectile.hpp  Ranged.cpp  Ranged.hpp  Sound.cpp  Sound.hpp  TextBox.cpp  TextBox.hpp  TextInputField.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Tile.hpp  Weapon.cpp  (+1 more)
src/lua/: CreateMap.lua  LoadMap.lua  LuaInterface.cpp  LuaInterface.hpp
src/physics/: Body.cpp  Body.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Manifold.cpp  Manifold.hpp  Math.h  PhysicsEngine.cpp  PhysicsEngine.hpp  Rect.h  Shape.hpp  Vec2.hpp
src/scripting/: CMakeLists.txt  LoadInventory.lua  LuaGeneralFunctions.hpp  LuaInGameFunctions.hpp  LuaInterface.cpp  LuaInterface.hpp  LuaLoadFunctions.hpp
src/tools/: CMakeLists.txt  Editor.cpp  Editor.hpp
src/ui/: Button.cpp  Button.hpp  CMakeLists.txt  CharacterCreationScreen.cpp  CharacterCreationScreen.hpp  Icon.cpp  Icon.hpp  InGame.cpp  InGame.hpp  MainMenu.cpp  MainMenu.hpp  SaveSlotSelection.cpp  SaveSlotSelection.hpp  Screen.cpp  Screen.hpp  TextBox.cpp  TextBox.hpp  TextInputBox.cpp  TextInputBox.hpp  UIController.cpp  UIController.hpp
tests/: enemies.lua  maps.lua  test1.cpp
